<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_medium_2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_medium_2">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_record"
            android:textColor="@android:color/white"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:cornerRadius="@dimen/margin_medium_2"
            android:paddingHorizontal="@dimen/margin_medium_2"
            app:backgroundTint="@color/yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info"
            android:padding="@dimen/margin_medium"
            android:textStyle="bold"/>

        <include
            android:id="@+id/vpPatientInfo"
            layout="@layout/viewpod_patient_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disease_questions"
            android:padding="@dimen/margin_medium"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAnsweredQAndA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tool:listitem="@layout/item_answered_q_and_a"
            tool:itemCount="2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:paddingVertical="@dimen/margin_medium"
            style="@style/BlueMaterialButton_round8dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>