<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/medicineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tool:text="@string/dummy_text_short"
        android:padding="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@android:color/secondary_text_light"
                android:padding="@dimen/margin_small"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dosage"
                android:textColor="@android:color/secondary_text_light"
                android:padding="@dimen/margin_small"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textColor="@android:color/secondary_text_light"
                android:padding="@dimen/margin_small"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@android:color/secondary_text_light"
                android:padding="@dimen/margin_small"/>
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/repeat"-->
<!--                android:padding="@dimen/margin_small"/>-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remark"
                android:textColor="@android:color/secondary_text_light"
                android:padding="@dimen/margin_small"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tool:text="@string/amount"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="bold"
                android:padding="@dimen/margin_small"/>
            <TextView
                android:id="@+id/tvDosage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tool:text="@string/dosage"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="bold"
                android:padding="@dimen/margin_small"/>
            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tool:text="@string/duration"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="bold"
                android:padding="@dimen/margin_small"/>
            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tool:text="@string/time"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="bold"
                android:padding="@dimen/margin_small"/>
<!--            <TextView-->
<!--                android:id="@+id/tvRepeat"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                tool:text="@string/repeat"-->
<!--                android:textStyle="bold"-->
<!--                android:padding="@dimen/margin_small"/>-->
            <TextView
                android:id="@+id/tvRemark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tool:text="@string/remark"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="bold"
                android:padding="@dimen/margin_small"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="@android:color/darker_gray" />
</LinearLayout>