<?xml version="1.0" encoding="utf-8"?>
<com.ktmmoe.shared.viewpods.PatientInfoViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="1.2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.5">
        <TextView
            android:id="@+id/consultedDateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consulted_date"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/patientNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_name"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/dobTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/heightTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/bloodTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blood_type"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/allergicPrescriptionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allergic_prescriptions"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/weightTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/bloodPressureTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blood_pressure"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.2">
        <TextView
            android:id="@+id/consultedDateColon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/patientNameColon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/dobColon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/heightColon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/bloodTypeColon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/allergicPrescriptionsColon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/weightColon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/bloodPressureColon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.5">
        <TextView
            android:id="@+id/tvConsultedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/patient_name"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/tvPatientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/patient_name"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/tvDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/dob"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/height"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/tvBloodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/blood_type"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/tvAllergicPrescriptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/allergic_prescriptions"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/weight"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/tvBloodPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/blood_pressure"
            android:padding="@dimen/margin_small_2"
            android:textColor="#000000"
            android:maxLines="1"/>

    </LinearLayout>

</com.ktmmoe.shared.viewpods.PatientInfoViewPod>