<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RegisterActivity">

    <ImageView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationY="-60dp"
        android:translationX="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/p_upper_path"/>

    <ImageView
        android:id="@+id/lowerPath"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:translationY="180dp"
        android:translationX="-90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/p_lower_path"/>

    <ImageView
        android:id="@+id/back"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin_medium_2"
        android:src="@drawable/ic_left_arrow"/>

    <TextView
        android:id="@+id/theCareMM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theCareMM"
        app:layout_constraintTop_toBottomOf="@id/back"
        android:gravity="start"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:textColor="@color/blue"/>

    <TextView
        android:id="@+id/patientApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patientApp"
        android:layout_marginStart="@dimen/margin_medium_3"
        app:layout_constraintTop_toBottomOf="@id/theCareMM"
        android:gravity="start"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/blue"/>

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:layout_marginHorizontal="@dimen/margin_medium_3"
        app:layout_constraintTop_toBottomOf="@id/patientApp"
        android:padding="@dimen/margin_medium"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/nameCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameText"
        android:layout_marginHorizontal="@dimen/margin_medium_3"
        app:cardCornerRadius="@dimen/margin_medium"
        app:cardElevation="@dimen/margin_medium">
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:textSize="@dimen/text_regular"
            android:singleLine="true" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/mailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:layout_marginHorizontal="@dimen/margin_medium_3"
        app:layout_constraintTop_toBottomOf="@id/nameCard"
        android:padding="@dimen/margin_medium"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mailCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mailText"
        android:layout_marginHorizontal="@dimen/margin_medium_3"
        app:cardCornerRadius="@dimen/margin_medium"
        app:cardElevation="@dimen/margin_medium">
        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:textSize="@dimen/text_regular"
            android:singleLine="true" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        android:layout_marginHorizontal="@dimen/margin_medium_3"
        app:layout_constraintTop_toBottomOf="@id/mailCard"
        android:padding="@dimen/margin_medium"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/passwordCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        android:layout_marginHorizontal="@dimen/margin_medium_3"
        app:cardCornerRadius="@dimen/margin_medium"
        app:cardElevation="@dimen/margin_medium">
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:textSize="@dimen/text_regular"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_screen_button_height"
        android:layout_marginHorizontal="@dimen/margin_medium_3"
        app:layout_constraintTop_toBottomOf="@id/passwordCard"
        android:layout_marginTop="@dimen/margin_medium_3"
        style="@style/BlueMaterialButton_round8dp"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:layout_marginEnd="@dimen/margin_medium_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/margin_medium_3"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>