<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor">

        <com.google.android.material.appbar.AppBarLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title="@string/profile"/>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/ivPatient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actionBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            tools:src="@drawable/ic_launcher_background"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintDimensionRatio="H,1:1"/>
        <TextView
            android:id="@+id/tvPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/text_regular_2x"
            tools:text="@string/dummy_text_short"
            android:textColor="@color/black"
            android:padding="@dimen/margin_medium"
            app:layout_constraintStart_toEndOf="@id/ivPatient"
            app:layout_constraintBottom_toTopOf="@id/tvPatientPhone"/>

        <TextView
            android:id="@+id/tvPatientPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_medium"
            tools:text="@string/dummy_text_short"
            app:layout_constraintStart_toEndOf="@id/ivPatient"
            app:layout_constraintBottom_toBottomOf="@id/ivPatient"/>

        <include
            android:id="@+id/vpPatientInfo"
            layout="@layout/viewpod_patient_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivPatient"
            android:layout_margin="@dimen/margin_medium_2"/>

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_medium_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_medium_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>