<?xml version="1.0" encoding="utf-8"?>
<com.ktmmoe.shared.viewpods.MessagingAreaViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@android:color/transparent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions"
            android:layout_margin="@dimen/margin_small"
            style="@style/SkyBlueMaterialButton_round8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/prescript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prescript"
            android:layout_margin="@dimen/margin_small"
            style="@style/SkyBlueMaterialButton_round8dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/medicalRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_record"
            android:layout_margin="@dimen/margin_small"
            style="@style/SkyBlueMaterialButton_round8dp"/>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_medium"
            android:gravity="center_vertical">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/clip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                android:padding="@dimen/margin_medium"
                app:cardBackgroundColor="@color/blue">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:tint="@android:color/white"
                    android:src="@drawable/ic_clip"
                    android:layout_margin="@dimen/margin_medium"/>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/write"
                style="@style/OutlinedRoundedBox"
                android:layout_marginHorizontal="@dimen/margin_medium">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMessage"
                    android:textSize="@dimen/text_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/send"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/ic_send"
                app:tint="@color/blue"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</com.ktmmoe.shared.viewpods.MessagingAreaViewPod>